fix: attribute naming

--- a/demo.html
+++ b/demo.html
@@ -23,6 +23,9 @@
   </script>
 
   <p><intl-displaynames locales="en" of="ja"></intl-displaynames>
+  <p>
+    dialect: <intl-displaynames locales="en" of="zh-Hant"></intl-displaynames>
+    standard: <intl-displaynames locales="en" of="zh-Hant" language-display="standard"></intl-displaynames>
   <p><intl-displaynames locales="en" of="jp" type="region"></intl-displaynames>
 
   <script type="module" src="./dist/elements/displaynames/displaynames.js"></script>
