improvements on intl-displaynames (#4)
* fix: attribute naming

* build: add dev server

* fix: reflect all props to attrs

* fix: lowercase region subtags not recogniazed in chrome

* test: add more tests

* chore: remove unused html import

* feat: handles locales as a list and ignores invalid locales

* refactor: add abstract intl element class

* test: add case-insensitivity test for region subtag

* refactor: move locale related props to the abstract class

* feat: add resolvedOptions()

* chore: add fixme

* refactor: make localeList read-only and validate options

* feat: use lang attr if locales is missing

* test: add test for prioritizing locales over lang

* feat: observe `lang` changes

* test: fix tests

* test: use husky to run test before commits

* build: fix husky

* chore: close p tags

* feat: adopt locales value to lang and dir

* feat: add none role if no author role defined

* fix: don't update dir if textInfo is not supported

* fix: don't update dir if textInfo is not supported

* chore: add new line

--- a/demo.html
+++ b/demo.html
@@ -22,8 +22,15 @@
     }
   </script>
 
-  <p><intl-displaynames locales="en" of="ja"></intl-displaynames>
-  <p><intl-displaynames locales="en" of="jp" type="region"></intl-displaynames>
+  <h1><code>intl-displaynames</code></h1>
+  <p><intl-displaynames locales="en" of="ja"></intl-displaynames></p>
+  <p>
+    dialect: <intl-displaynames locales="en" of="zh-Hant"></intl-displaynames>
+    standard: <intl-displaynames locales="en" of="zh-Hant" language-display="standard"></intl-displaynames>
+  </p>
+  <p><intl-displaynames locales="en" of="jp" type="region"></intl-displaynames></p>
+  <p><intl-displaynames locales="zh-CN" of="jpy" type="currency"></intl-displaynames></p>
+  <p><intl-displaynames locales="ko" of="minute" type="dateTimeField"></intl-displaynames></p>
 
   <script type="module" src="./dist/elements/displaynames/displaynames.js"></script>
 </html>
