feat: add intl-relativetimeformat element

--- a/demo.html
+++ b/demo.html
@@ -43,6 +43,11 @@
     <intl-listitem>pitbull</intl-listitem>
   </intl-listformat>
 
+  <h2><code>intl-relativetimeformat</code></h2>
+  <p><intl-relativetimeformat locales="en" value="1" unit="day"></intl-relativetimeformat></p>
+  <p><intl-relativetimeformat locales="ja" value="10" unit="year"></intl-relativetimeformat></p>
+  <p><intl-relativetimeformat locales="ar" value="100" unit="minute"></intl-relativetimeformat></p>
+
   <script type="module">
     import {defineIntlElements} from './dist/index.js';
     defineIntlElements();
