test: add tests

--- a/demo.html
+++ b/demo.html
@@ -26,8 +26,8 @@
 
   <h2><code>intl-locale</code></h2>
   <p><intl-locale tag="zh-CN"></intl-locale></p>
-  <p><intl-locale tag="zh-Hant-HK" display-minimum></intl-locale></p>
-  <p><intl-locale tag="zh-Hant-HK" display-maximum></intl-locale></p>
+  <p><intl-locale tag="zh-Hant-HK" display-minimized></intl-locale></p>
+  <p><intl-locale tag="zh-Hant-HK" display-maximized></intl-locale></p>
   <p><intl-locale tag="zh-Hant-HK" display-string></intl-locale></p>
 
   <h2><code>intl-displaynames</code></h2>
