add `intl-locale` element (#16)
* refactor: return nothing instead of empty string

* fix: avoid attacning shadow dom to intl-listitem

* feat: add basic intl-locale element

* feat: add additional props from Intl.Locale to intl-locale

* test: add tests

--- a/demo.html
+++ b/demo.html
@@ -24,6 +24,12 @@
 
   <h1>intl-elements demo</h1>
 
+  <h2><code>intl-locale</code></h2>
+  <p><intl-locale tag="zh-CN"></intl-locale></p>
+  <p><intl-locale tag="zh-Hant-HK" display-minimized></intl-locale></p>
+  <p><intl-locale tag="zh-Hant-HK" display-maximized></intl-locale></p>
+  <p><intl-locale tag="zh-Hant-HK" display-string></intl-locale></p>
+
   <h2><code>intl-displaynames</code></h2>
   <p><intl-displaynames locales="en" of="ja"></intl-displaynames></p>
   <p>
