BREAKING: rename intl-locale attributes and properties

--- a/demo.html
+++ b/demo.html
@@ -29,6 +29,7 @@
   <p><intl-locale tag="zh-Hant-HK" display-minimized></intl-locale></p>
   <p><intl-locale tag="zh-Hant-HK" display-maximized></intl-locale></p>
   <p><intl-locale tag="zh-Hant-HK" display-string></intl-locale></p>
+  <p><intl-locale tag="ko" option-script="kore" option-region="kr" option-hourcycle="h24" display-maximized></intl-locale></p>
 
   <h2><code>intl-displaynames</code></h2>
   <p><intl-displaynames locales="en" of-code="ja"></intl-displaynames></p>
