feat: add intl-displaynames-of element and refactor

--- a/demo-shadow.html
+++ b/demo-shadow.html
@@ -38,10 +38,11 @@
   </p>
 
   <h2><code>intl-displaynames</code></h2>
+  <intl-displaynames locales="en" option-type="language">
+    <p><intl-displaynames-of><data value="zh-CN">Chinese</data></intl-displaynames-of></p>
+    <p><intl-displaynames-of><data value="zh-Hant">Chinese</data></intl-displaynames-of></p>
+  </intl-displaynames>
   <p>
-    <intl-displaynames locales="ko" option-type="language">
-      <intl-displaynames-of><data value="zh">Chinese</data></intl-displaynames-of>
-    </intl-displaynames>
     <intl-displaynames locales="ko" option-type="dateTimeField">
       <intl-displaynames-of><data value="minute">Minute</data></intl-displaynames-of>
     </intl-displaynames>
