refactor: refactor intl-relativetimeformat

--- a/demo-shadow.html
+++ b/demo-shadow.html
@@ -62,17 +62,19 @@
   </p>
 
   <h2><code>intl-relativetimeformat</code></h2>
-  <p>
-    <intl-relativetimeformat locales="ar">
+  <intl-relativetimeformat locales="ar">
+    <p>
       <intl-relativetimeformat-format>
-        <data slot="value">10</data>
-        <data slot="unit">minute</data>
+        <data slot="rtime" value="-10">10</data>
+        <data slot="unit" value="minute">minutes</data>
       </intl-relativetimeformat-format>
+    </p>
+    <p>
       <intl-relativetimeformat-format>
         <data value="10">10</data> <data value="minute">Min.</data>
       </intl-relativetimeformat-format>
-    </intl-relativetimeformat>
-  </p>
+    </p>
+  </intl-relativetimeformat>
 
   <h2><code>intl-segmenter</code></h2>
   <p>
