feat: add intl-relativetimeformat-formattoparts element

--- a/demo-shadow.html
+++ b/demo-shadow.html
@@ -62,7 +62,7 @@
   </p>
 
   <h2><code>intl-relativetimeformat</code></h2>
-  <intl-relativetimeformat locales="ar">
+  <intl-relativetimeformat locales="en">
     <p>
       <intl-relativetimeformat-format>
         <data slot="rtime" value="-10">10</data>
@@ -71,7 +71,14 @@
     </p>
     <p>
       <intl-relativetimeformat-format>
-        <data value="10">10</data> <data value="minute">Min.</data>
+        <data value="1.5">1.5</data>
+        <data value="minute">Min.</data>
+      </intl-relativetimeformat-format>
+    </p>
+    <p>
+      <intl-relativetimeformat-formattoparts>
+        <data value="-3.5">-3.5</data>
+        <data value="quarters">quarters</data>
       </intl-relativetimeformat-format>
     </p>
   </intl-relativetimeformat>
