refactor: rename AbstractIntlElement to AbstractIntlProviderElement

--- a/demo-shadow.html
+++ b/demo-shadow.html
@@ -140,6 +140,36 @@
     </p>
   </intl-pluralrules>
 
+  <h2><code>intl-collator</code></h2>
+  <intl-collator>
+    <intl-collator-sort>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </intl-collator-sort>
+
+    <intl-collator-sort>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </intl-collator-sort>
+
+    <intl-collator-sort>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </intl-collator-sort>
+
+    <intl-collator-match>
+      <data slot="target"></data>
+    </intl-collator-sort>
+  </intl-collator>
+
   <script type="module">
     import {defineIntlElements} from './dist/index.js';
     defineIntlElements();
