feat: add intl-listformat-format and -formattoparts elements

--- a/demo-shadow.html
+++ b/demo-shadow.html
@@ -49,8 +49,8 @@
   </p>
 
   <h2><code>intl-listformat</code></h2>
-  <p>
-    <intl-listformat locales="en">
+  <intl-listformat locales="en">
+    <p>
       <intl-listformat-format>
         <data value="corgi">Corgi</data>
         <data value="pomerania">Pomeranian</data>
@@ -58,8 +58,17 @@
         <data value="shar-pei">Shar-pei</data>
         <data value="pitbull">Pitbull</data>
       </intl-listformat-format>
-    </intl-listformat>
-  </p>
+    </p>
+    <p>
+      <intl-listformat-formattoparts>
+        <data value="corgi">Corgi</data>
+        <data value="pomerania">Pomeranian</data>
+        <data value="pug">Pug</data>
+        <data value="shar-pei">Shar-pei</data>
+        <data value="pitbull">Pitbull</data>
+      </intl-listformat-format>
+    </p>
+  </intl-listformat>
 
   <h2><code>intl-relativetimeformat</code></h2>
   <intl-relativetimeformat locales="en">
