--- a/demo.html
+++ b/demo.html
@@ -65,6 +65,15 @@
     </p>
   </intl-listformat>
 
+  <h2><code>intl-numberformat</code></h2>
+  <p>
+    <intl-numberformat locales="en" option-style="currency" option-currency="usd">
+      <intl-numberformat-format>
+        <data value="1234567.89">USD 1234567.89</data>
+      </intl-numberformat-format>
+    </intl-numberformat>  
+  </p>
+
   <h2><code>intl-relativetimeformat</code></h2>
   <intl-relativetimeformat locales="en">
     <p>
