build: separate tsconfig for prod

--- a/demo.html
+++ b/demo.html
@@ -268,7 +268,7 @@
   </intl-collator>
 
   <script type="module">
-    import {defineIntlElements} from './dist/src/index.js';
+    import {defineIntlElements} from './dist/index.js';
     defineIntlElements();
   </script>
 </html>
