--- a/demo.html
+++ b/demo.html
@@ -267,6 +267,9 @@
     </intl-collator-compare>
   </intl-collator>
 
+  <api-viewer src="./custom-elements.json"></api-viewer>
+
+  <script src="https://unpkg.com/api-viewer-element" type="module"></script>
   <script type="module">
     import {defineIntlElements} from './dist/index.js';
     defineIntlElements();
