docs: add main readme

--- a/demo.html
+++ b/demo.html
@@ -269,6 +269,7 @@
 
   <script type="module">
     import {defineIntlElements} from './dist/index.js';
+    // import {defineIntlElements} from 'https://esm.sh/intl-elements?bundle';
     defineIntlElements();
   </script>
 </html>
