feat: make all option* properties reflect

--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,7 @@
     <p><intl-displaynames-of><data value="zh-hant">chinese</data></intl-displaynames-of></p>
   </intl-displaynames>
   <p>
-    <intl-displaynames locales="ko" option-type="dateTimeField">
+    <intl-displaynames locales="ko" option-type="datetimefield">
       <intl-displaynames-of><data value="minute">minute</data></intl-displaynames-of>
     </intl-displaynames>
   </p>
